@@ -6,6 +6,7 @@ import com.hcu.hot6.domain.Member;
 import com.hcu.hot6.domain.filter.PostSearchFilter;
 import com.hcu.hot6.domain.request.MemberRequest;
 import com.hcu.hot6.domain.request.PostCreationRequest;
+import com.hcu.hot6.domain.request.TagForm;
 import com.hcu.hot6.repository.MemberRepository;
 import com.hcu.hot6.service.PostService;
 import jakarta.annotation.PostConstruct;
@@ -82,7 +83,7 @@ public class PostFilterTests {
         final var request = PostCreationRequest.builder()
                 .title("모집글 제목")
                 .summary("한 줄 소개")
-                .tags(List.of("두번째줄_태그", "마지막_태그"))
+                .tags(new TagForm(List.of("두번째줄_태그", "마지막_태그")))
                 .postTypes(List.of("학회", "학술모임"))
                 .recruitStart(new Date())
                 .recruitEnd(new Date())
@@ -112,7 +113,7 @@ public class PostFilterTests {
         final var request = PostCreationRequest.builder()
                 .title("모집글 제목")
                 .summary("한 줄 소개")
-                .tags(List.of("두번째줄_태그;마지막_태그"))
+                .tags(new TagForm(List.of("두번째줄_태그", "마지막_태그")))
                 .postTypes(List.of("학회", "학술모임"))
                 .recruitStart(new Date())
                 .recruitEnd(new Date())
@@ -141,7 +142,7 @@ public class PostFilterTests {
         final var request = PostCreationRequest.builder()
                 .title("모집글 제목")
                 .summary("한 줄 소개")
-                .tags(List.of("소망", "축복"))
+                .tags(new TagForm(List.of("소망", "축복")))
                 .postTypes(List.of("학회", "학술모임"))
                 .recruitStart(new Date())
                 .recruitEnd(new Date())
@@ -154,7 +155,7 @@ public class PostFilterTests {
         final var request2 = PostCreationRequest.builder()
                 .title("모집글 제목")
                 .summary("한 줄 소개")
-                .tags(List.of("온유", "축복"))
+                .tags(new TagForm(List.of("온유", "축복")))
                 .postTypes(List.of("학회", "학술모임"))
                 .recruitStart(new Date())
                 .recruitEnd(new Date())
@@ -183,7 +184,7 @@ public class PostFilterTests {
         final var request = PostCreationRequest.builder()
                 .title("모집글 제목")
                 .summary("한 줄 소개")
-                .tags(List.of("소망", "축복"))
+                .tags(new TagForm(List.of("소망", "축복")))
                 .postTypes(List.of("학회", "학술모임"))
                 .recruitStart(new Date())
                 .recruitEnd(new Date())
@@ -195,7 +196,7 @@ public class PostFilterTests {
         final var request2 = PostCreationRequest.builder()
                 .title("모집글 제목")
                 .summary("한 줄 소개")
-                .tags(List.of("온유", "축복"))
+                .tags(new TagForm(List.of("온유", "축복")))
                 .postTypes(List.of("학회", "학술모임"))
                 .recruitStart(new Date())
                 .recruitEnd(new Date())
@@ -217,7 +218,8 @@ public class PostFilterTests {
 
         // then
         assertThat(response.getTotal()).isEqualTo(1L);
-        assertThat(response.getPosts().get(0).getTags()).isEqualTo("온유;축복");
+        assertThat(response.getPosts().get(0).getTags().getFirst()).isEqualTo(List.of("온유"));
+        assertThat(response.getPosts().get(0).getTags().getSecond()).isEqualTo(List.of("축복"));
     }
 
     @Test
@@ -226,7 +228,7 @@ public class PostFilterTests {
         final var request = PostCreationRequest.builder()
                 .title("모집글 제목")
                 .summary("한 줄 소개")
-                .tags(List.of("소망", "축복"))
+                .tags(new TagForm(List.of("소망", "축복")))
                 .postTypes(List.of("학회", "학술모임"))
                 .recruitStart(new Date())
                 .recruitEnd(new Date())
